syntax = "proto3";

package tasks.api.task;
option go_package = "tasks/pkg/api;api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Admin {
  rpc TaskCreate(TaskCreateRequest) returns (TaskResponse) {
    option (google.api.http) = {
      post: "/v1/task"
      body: "*"
    };
  }
  rpc TaskGet(TaskGetRequest) returns (TaskResponse) {
    option (google.api.http) = {
      get: "/v1/task"
    };
  }
  rpc TaskUpdate(TaskUpdateRequest) returns (TaskResponse) {
    option (google.api.http) = {
      patch: "/v1/title"
      body: "*"
    };
  }
  rpc TaskDelete(TaskDeleteRequest) returns (TaskResponse) {
    option (google.api.http) = {
      delete: "/v1/task"
      body: "*"
    };
  }
  rpc TaskAll(TaskAllRequest) returns (TaskAllResponse) {
    option (google.api.http) = {
      get: "/v1/tasks"
    };
  }
  rpc TaskComplete(TaskCompleteRequest) returns (TaskResponse) {
    option (google.api.http) = {
      patch: "/v1/complete"
      body: "*"
    };
  }
}

message TaskResponse {
  uint64  id            = 1;
  string  title         = 2;
  bool    is_completed  = 3;
  string  created_at    = 4;
  string  completed_at  = 5;
}

message TaskCreateRequest {
  string title = 1;
}

message TaskGetRequest {
  uint64 id = 1;
}

message TaskUpdateRequest {
  uint64 id     = 1;
  string title  = 2;
}

message TaskDeleteRequest {
  uint64 id = 1;
}

message TaskAllRequest {
  uint64 limit = 1;
  uint64 offset = 2;
}

message TaskAllResponse {
  repeated TaskResponse tasks = 1;
}

message TaskCompleteRequest {
  uint64 id = 1;
}

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "localhost:8078";
};